# AddressBook

./: AddCommand.cpp  AddressBook.cpp  AddressBook.hpp  Command.hpp  CommandForBuild.cpp  CommandForBuild.hpp  CommandInvoker.hpp  CommandVisitor.hpp  Contact.cpp  Contact.hpp  Database.hpp  DatabaseConnection.cpp  DatabaseConnection.hpp  DatabaseException.hpp  DatabaseFactory.cpp  DatabaseFactory.hpp  DatabaseInitializerSingleton.cpp  DatabaseInitializerSingleton.hpp  FindCommand.cpp  FindCommand.hpp  RemoveCommand.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp  SortCommand.cpp  a.out  mock.cpp  whatDoesItDo.txt
0.0.AddressBook10/: main.cpp
0.0.AddressBook10/Data/: AddressBookModel.cpp  AddressBookModel.hpp  Contact.hpp  Database.cpp  Database.hpp
0.0.AddressBook10/GUI/: AddDialog.cpp  AddDialog.hpp  MainWindow.cpp  MainWindow.hpp  SignInMenu.cpp  SignInMenu.hpp  SignUpMenu.cpp  SignUpMenu.hpp  StartMenu.hpp  TableInterface.cpp  TableInterface.hpp
0.0.AddressBook10/Logic/: SignInMenuLogic.hpp  TableLogic.hpp
0.0.AddressBook11/: CMakeLists.txt
0.0.AddressBook11/Data/: DatabaseManager.cpp  User.cpp
0.0.AddressBook11/GUI/: AddDialog.cpp  MainWindow.cpp  SignInMenu.cpp  SignUpMenu.cpp  TableInterface.cpp  TableInterface.hpp
0.0.AddressBook11/Logic/: SignInMenuLogic.cpp  TableLogic.hpp
0.0.AddressBook11/zinfo/: users.db
0.0.AddressBook8/: todo.txt
0.AddressBook10_clean/: CMakeLists.txt  Controller.cpp  Controller.hpp  main.cpp
0.AddressBook7/: CMakeLists.txt
AddrBookQtTest/: AddrBookQtTest.cpp  CMakeLists.txt
AddressBook1/: AddDialog.cpp  AddDialog.hpp  AddressWidget.cpp  AddressWidget.hpp  CMakeLists.txt  Contact.hpp  MainWindow.cpp  MainWindow.hpp  NewAddressTab.cpp  NewAddressTab.hpp  TableModel.hpp  main.cpp
AddressBook2/: main.cpp
AddressBook3/: AddDialog.cpp  AddressBook.cpp  AddressBook.hpp  AddressBookTab copy.cpp  AddressBookTab.hpp  CMakeLists.txt  OpenDialog.cpp  OpenDialog.hpp  main.cpp  testAddrBook.cpp
AddressBook4/: CMakeLists.txt  address_book.db  main.cpp  untitled.db  untitled1.db  untitled2.db  untitled3.db  untitled4.db  untitled5.db  untitled6.db  untitled7.db  untitled8.db
AddressBook5/: CMakeLists.txt  add_b.db  main.cpp  untitled.db  untitled1.db  untitled10.db  untitled11.db  untitled12.db  untitled13.db  untitled14.db  untitled15.db  untitled16.db  untitled17.db  untitled18.db  untitled2.db  untitled3.db  untitled4.db  untitled5.db  untitled6.db  untitled7.db  untitled8.db  untitled9.db
AddressBook5/Data/: Database.cpp  Database.hpp
AddressBook5/GUI/: AddDialog.cpp  AddDialog.hpp  AddressBookInterface.cpp  AddressBookInterface.hpp  MainWindow.cpp  SaveDialog.hpp  SearchResultDialog.cpp  StartMenu.hpp  TabNames.hpp  Tables.hpp
AddressBook5/Logic/: AddressBookLogic.cpp  AddressBookLogic.hpp
Commands/: AddCommand.hpp  AddToDatabaseCommand.cpp  AddToDatabaseCommand.hpp  CommandVisitorBuilder.cpp  CommandVisitorBuilder.hpp  DatabaseCommand.hpp  RemoveCommand.cpp  SortCommand.hpp
tests/: classFromStruct.cpp
tests and drafts/: Tables.cpp
tests and drafts/AddressBook2/: CMakeLists.txt
tests and drafts/AddressBook2/DataLayer/: TableModel.cpp  TableModel.hpp
tests and drafts/AddressBook2/GUI/: AddDialog.hpp  AddressWidget.hpp  AfterNewAddressTab.cpp  MainWindow.cpp  NewAddressTab.cpp  NewAddressTab.hpp
tests and drafts/AddressBook2/Logic/: Serializer.hpp
(+177 files in other folders)
